Исправил 2 потенциальные уязвимости, выявленные анализатором кода